--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Degovan",
+  "name": "degovan",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,5 +13,10 @@
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
+    "node-sass": "^6.0.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.2.0"
+  }
 }
